--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "sanitize-html": "^2.7.2",
+    "stylis": "^4.1.2",
+    "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
